review a couple of slides

--- a/index.html
+++ b/index.html
@@ -174,10 +174,6 @@
 </head>
 
 
-<!-- 1- clone decktape -->
-<!-- 2- do wherever the repo is locally cd ~/Github/decktape -->
-<!-- ./bin/phantomjs decktape.js -s 1600x900 file:///Users/KevCaz/Dropbox/grenoble2017/grenoble.html#1 /Users/KevCaz/Dropbox/grenoble2017/grenoble.pdf -->
-
 
 
 <body>
@@ -193,7 +189,7 @@
     # TOWARD AN ENERGETIC THEORY OF ISLAND BIOGEOGRAPHY
 
     <br/><br/>
-    ### BSE Annual Meeting - December 14, 2017
+    ### Ecology Across Borders - December 14, 2017
 
     <br>
 
@@ -341,25 +337,10 @@
     Powerful vision but strong assumption
 
 
-
-    ---
-    # Species are not Independent
-    <hr/><br/>
-
-    --
-    ### [Holt, *Toward a Trophic Island Biogeography* (book chapter), 2009.](https://press.princeton.edu/titles/9096.html)
-    <br>
-
-    --
+    <!-- ### [Holt, *Toward a Trophic Island Biogeography* (book chapter), 2009.](https://press.princeton.edu/titles/9096.html)
     ### [Gravel *et al.*, *Ecology Letters*, 2011.](http://onlinelibrary.wiley.com/doi/10.1111/j.1461-0248.2011.01667.x/abstract)
-    <br>
-
-    --
     ### [Cazelles *et al.*, *Ecography*, 2016.](http://onlinelibrary.wiley.com/doi/10.1111/ecog.01714/abstract)
-    <br>
-
-    --
-    ### [Massol *et al.*, *Advances in Ecological Research*, 2017.](https://doi.org/10.1016/bs.aecr.2016.10.004)
+    ### [Massol *et al.*, *Advances in Ecological Research*, 2017.](https://doi.org/10.1016/bs.aecr.2016.10.004) -->
 
 
     ???
@@ -367,20 +348,20 @@
 
 
     ---
-    # Networks and TIB
+    # Networks and TIB  &nbsp; .small[[Cazelles *et al.*, *Ecography*, 2016.](http://onlinelibrary.wiley.com/doi/10.1111/ecog.01714/abstract)]
     <hr/><br/>
 
     .center[![:scale 100%](img/figeco3.png)]
 
 
     ---
-    # Networks and TIB
+    # Networks and TIB  &nbsp; .small[[Cazelles *et al.*, *Ecography*, 2016.](http://onlinelibrary.wiley.com/doi/10.1111/ecog.01714/abstract)]
     <hr/><br/>
 
     .center[![:scale 100%](img/figeco5.png)]
 
     ---
-    # Networks and TIB
+    # Networks and TIB  &nbsp; .small[[Cazelles *et al.*, *Ecography*, 2016.](http://onlinelibrary.wiley.com/doi/10.1111/ecog.01714/abstract)]
     <hr/><br/>
 
     .center[![:scale 100%](img/figeco7.png)]
@@ -444,7 +425,6 @@
     # A truism?
     <hr/><br>
 
-    ## Energy
 
     --
     ### 1- Solar radiation ![:fontawe](long-arrow-right) Autotrophs ![:fontawe](long-arrow-right) Hetreotrophs
@@ -471,17 +451,20 @@
     # Model principle
     <hr/><br>
 
-    ## Trophic Theory of Island Biogeography
+    .center[![:scale 100%](img/figeco5.png)]
 
+    ---
+    # Model principle
+    <hr/><br>
+
+    ## What's new?
+    <br>
+
+    --
     ## Cost of a community
 
-    ### - Mean energy consumption per individual (MET / DEB)
-
-    ### - Minimal Viable Population (MVP)
-
-    ### - Engery transfer (Φ)
-
-    ## Extinctions
+    --
+    ## Extinctions random or energy based
 
 
     ---
@@ -548,22 +531,50 @@
     .center[![:scale 100%](img/figeco9.png)]
 
 
+
     ---
-    # SAR becomes EAR
+    # SARs become SERs &nbsp;&nbsp; [Wright, *Oikos*, 1983.](https://www.jstor.org/stable/3544109)
     <hr/>
 
-    ### [Wright, *Oikos*, 1983.](https://www.jstor.org/stable/3544109)
+    .center[![:scale 100%](img/figRes11.png)]
+
+    ---
+    # SARs become SERs &nbsp;&nbsp; [Wright, *Oikos*, 1983.](https://www.jstor.org/stable/3544109)
+    <hr/>
+
+    .center[![:scale 100%](img/figRes12.png)]
+
+
+    ---
+    # SARs become SERs &nbsp;&nbsp; [Wright, *Oikos*, 1983.](https://www.jstor.org/stable/3544109)
+    <hr/>
+
+    .center[![:scale 100%](img/figRes13.png)]
+
+
+    ---
+    # SARs become SERs &nbsp;&nbsp; [Wright, *Oikos*, 1983.](https://www.jstor.org/stable/3544109)
+    <hr/>
+
+    .center[![:scale 100%](img/figRes14.png)]
+
+    ---
+    # SARs become SERs &nbsp;&nbsp; [Wright, *Oikos*, 1983.](https://www.jstor.org/stable/3544109)
+    <hr/>
+
+    .center[![:scale 100%](img/figRes15.png)]
+
 
 
 
     ---
-    # Results 1/2
+    # Mean degree
     <hr/>
 
     <!-- contrast random and non randon scenarios -->
 
     ---
-    # Results 2/2
+    # Mean trophic level
     <hr/>
 
 
@@ -593,6 +604,11 @@
     ## Improve integration of processes
     <br>
 
+    ### TTIB / MET
+
+    ### Better quantification?
+
+    <br>
     --
     ## Better understanding of what distributions say
 
