--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
     ## **What** are the constraints?
 
     --
-    ## Energy constraints community
+    ## Energy constrains community
 
     ### [Metabolic Theory of Ecology](http://onlinelibrary.wiley.com/doi/10.1890/03-9000/abstract)
 
@@ -425,8 +425,6 @@
     # A truism?
     <hr/><br>
 
-
-    --
     ### 1- Solar radiation ![:fontawe](long-arrow-right) Autotrophs ![:fontawe](long-arrow-right) Hetreotrophs
     <br>
 
@@ -461,23 +459,30 @@
     <br>
 
     --
-    ## Cost of a community
+    ## 1- Cost of a community
 
     --
-    ## Extinctions random or energy based
+    ## 2- Extinctions
+
+      ### Random
+
+      ### Energy based
 
 
     ---
     # Energy cost of a network on an island
     <hr/><br>
 
-    .center[![:scale 45%](img/netenerg1.png)]
+    .center[![:scale 35%](img/netenerg1.png)]
+
+    ### Niche model + body size to derive maintenance metabolism
 
     ---
     # Energy cost of a network on an island
     <hr/><br>
 
     .center[![:scale 45%](img/netenerg2.png)]
+
 
     ---
     # Energy cost of a network on an island
@@ -533,37 +538,36 @@
 
 
     ---
-    # SARs become SERs &nbsp;&nbsp; [Wright, *Oikos*, 1983.](https://www.jstor.org/stable/3544109)
+    # SARs become SERs &nbsp;&nbsp; .small[[Wright, *Oikos*, 1983.](https://www.jstor.org/stable/3544109)]
     <hr/>
 
     .center[![:scale 100%](img/figRes11.png)]
 
     ---
-    # SARs become SERs &nbsp;&nbsp; [Wright, *Oikos*, 1983.](https://www.jstor.org/stable/3544109)
+    # SARs become SERs &nbsp;&nbsp;
     <hr/>
 
     .center[![:scale 100%](img/figRes12.png)]
 
 
     ---
-    # SARs become SERs &nbsp;&nbsp; [Wright, *Oikos*, 1983.](https://www.jstor.org/stable/3544109)
+    # SARs become SERs &nbsp;&nbsp;
     <hr/>
 
     .center[![:scale 100%](img/figRes13.png)]
 
 
     ---
-    # SARs become SERs &nbsp;&nbsp; [Wright, *Oikos*, 1983.](https://www.jstor.org/stable/3544109)
+    # SARs become SERs &nbsp;&nbsp;
     <hr/>
 
     .center[![:scale 100%](img/figRes14.png)]
 
     ---
-    # SARs become SERs &nbsp;&nbsp; [Wright, *Oikos*, 1983.](https://www.jstor.org/stable/3544109)
+    # SARs become SERs &nbsp;&nbsp;
     <hr/>
 
     .center[![:scale 100%](img/figRes15.png)]
-
 
 
 
@@ -571,11 +575,34 @@
     # Mean degree
     <hr/>
 
-    <!-- contrast random and non randon scenarios -->
+    .center[![:scale 100%](img/figRes21.png)]
 
     ---
-    # Mean trophic level
+    # Mean degree
     <hr/>
+
+    .center[![:scale 100%](img/figRes22.png)]
+
+    ---
+    # Mean degree
+    <hr/>
+
+    .center[![:scale 100%](img/figRes23.png)]
+
+    ---
+    # Mean degree
+    <hr/>
+
+    .center[![:scale 100%](img/figRes24.png)]
+
+    ---
+    # Mean degree &nbsp;&nbsp; .small[[Piechnik *et al.*, *Oikos*, 2008.](https://www.jstor.org/stable/3544109)]
+    <hr/>
+
+    .center[![:scale 100%](img/figRes25.png)]
+
+
+    <!-- contrast random and non randon scenarios -->
 
 
 
@@ -602,28 +629,26 @@
 
     --
     ## Improve integration of processes
+
+    ### - TTIB / MET
+
+    ### - Better quantification?
+
     <br>
 
-    ### TTIB / MET
-
-    ### Better quantification?
-
-    <br>
     --
     ## Better understanding of what distributions say
+
+    <br>
+
+    --
+    ## The problem of the metaweb
 
     ---
     # New insights
     <hr/><br>
 
     .center[![:scale 85%](img/Hatton.png)]
-
-
-    ---
-    # New insights
-    <hr/><br>
-
-    .center[![:scale 100%](img/ecoreg.png)]
 
     ---
     # New insights
