review first and last slides

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-  <title> Toward an energetic theory of island biogeography </title>
+  <title> Towards an energetic theory of island biogeography </title>
   <meta charset="utf-8">
 
 
@@ -26,6 +26,7 @@
   <style>
   @import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
   @import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic);
+  @import url('https://fonts.googleapis.com/css?family=Bowlby+One+SC');
   @import url('https://fonts.googleapis.com/css?family=Andada|Squada+One|Jaldi|Luckiest+Guy|Bowlby+One+SC');
   @import url('https://fonts.googleapis.com/css?family=Anton|Bangers|Rubik+Mono+One');
   /*<link href="https://fonts.googleapis.com/css?family=Bungee|Candal|Passion+One" rel="stylesheet">*/
@@ -38,10 +39,10 @@
   }
 
   h1 {
-    font-family: 'Rubik Mono One'', cursive;
-    /*font-family: 'Bungee', cursive;*/
-    /*font-family: 'Passion One', cursive;*/
-    /*font-family: 'Candal', sans-serif;*/
+    /* font-family: 'Bowlby One SC', cursive; */
+    /* font-family: 'Bungee', cursive; */
+    /* font-family: 'Passion One', cursive; */
+    font-family: 'Candal', sans-serif;
   }
 
   h2 {
@@ -176,6 +177,11 @@
 
 
 
+
+
+
+
+
 <body>
 
   <textarea id="source">
@@ -186,18 +192,17 @@
     ---
 
 
-    # TOWARD AN ENERGETIC THEORY OF ISLAND BIOGEOGRAPHY
+    <h1 style="font-weight: 600"> TOWARDS AN ENERGETIC THEORY OF ISLAND BIOGEOGRAPHY </h1>
 
     <br/><br/>
-    ### Ecology Across Borders - December 14, 2017
+    ### ESA annual meeting - August 3<sup>rd</sup>, 2018
 
     <br>
 
-    ### .left[[Kevin Cazelles](http://kevincazelles.fr)]
+    ### .left[![:fontawe](twitter) [KCazelles](http://kevincazelles.fr)]
 
-    ### .left[![:fontawe](github) .small[[https://github.com/KevCaz/talkBES2017](https://github.com/KevCaz/talkBES2017)]]
+    ### .left[![:fontawe](github) .small[[KevCaz/talkETIB](https://github.com/KevCaz/talkBES2017)]]
 
-    <br>
 
     .right[[inSileco](https://inSileco.github.io/)]
     <img src="img/inSilecoLogo.png" height="120" align="right" style="padding:8px"/>
@@ -319,17 +324,17 @@
     class: style1
 
     ---
-    # Theory of Island Biogeography (TIB ; 1963)
+    # Theory of Island Biogeography (TIB)
     <hr/><br/>
     .center[![:scale 100%](img/figMW5.png)]
 
     ---
-    # Theory of Island Biogeography (TIB ; 1963)
+    # Theory of Island Biogeography (TIB)
     <hr/><br/>
     .center[![:scale 100%](img/figMW6.png)]
 
     ---
-    # Theory of Island Biogeography (TIB ; 1963)
+    # Theory of Island Biogeography (TIB)
     <hr/><br/>
     .center[![:scale 100%](img/figMW8.png)]
 
@@ -348,23 +353,29 @@
 
 
     ---
-    # Networks and TIB  &nbsp; .small[[Cazelles *et al.*, *Ecography*, 2016.](http://onlinelibrary.wiley.com/doi/10.1111/ecog.01714/abstract)]
+    # Networks and TIB
     <hr/><br/>
 
-    .center[![:scale 100%](img/figeco3.png)]
+    .center[![:scale 90%](img/figeco3.png)]
+
+    .small[[Cazelles *et al.*, *Ecography*, 2016.](http://onlinelibrary.wiley.com/doi/10.1111/ecog.01714/abstract)]
+
+    ---
+    # Networks and TIB
+    <hr/><br/>
+
+    .center[![:scale 90%](img/figeco5.png)]
+
+    .small[[Cazelles *et al.*, *Ecography*, 2016.](http://onlinelibrary.wiley.com/doi/10.1111/ecog.01714/abstract)]
 
 
     ---
-    # Networks and TIB  &nbsp; .small[[Cazelles *et al.*, *Ecography*, 2016.](http://onlinelibrary.wiley.com/doi/10.1111/ecog.01714/abstract)]
+    # Networks and TIB
     <hr/><br/>
 
-    .center[![:scale 100%](img/figeco5.png)]
+    .center[![:scale 90%](img/figeco7.png)]
 
-    ---
-    # Networks and TIB  &nbsp; .small[[Cazelles *et al.*, *Ecography*, 2016.](http://onlinelibrary.wiley.com/doi/10.1111/ecog.01714/abstract)]
-    <hr/><br/>
-
-    .center[![:scale 100%](img/figeco7.png)]
+    .small[[Cazelles *et al.*, *Ecography*, 2016.](http://onlinelibrary.wiley.com/doi/10.1111/ecog.01714/abstract)]
 
 
 
@@ -664,9 +675,13 @@
     layout: true
     class: center, middle, style2
     ---
-    # The end
+    # THE END - THANKS!
+    <hr>
 
-    <!-- for the sake of doing something funny let's chnage the font -->
+    <br><br>
+
+    ![:scale 80%](img/thanks.png)
+
 
 
   </textarea>
