review intro and conclu

--- a/index.html
+++ b/index.html
@@ -132,7 +132,12 @@
 
   .style1 h1, .style1 h2 {
     color: #fff;
-    font-size: 1.8em;
+    font-size: 1.7em;
+  }
+
+  .style1 h4 {
+    color: #fff;
+    font-size: 1.1em;
   }
 
   .style1 a {
@@ -195,7 +200,7 @@
     <h1 style="font-weight: 600"> TOWARDS AN ENERGETIC THEORY OF ISLAND BIOGEOGRAPHY </h1>
 
     <br/><br/>
-    ### ESA annual meeting - August 3<sup>rd</sup>, 2018
+    ### ESA annual meeting - August 9<sup>th</sup>, 2018
 
     <br>
 
@@ -274,15 +279,36 @@
     # Biogeography: questions
     <hr/><br/>
 
-    --
     ### How processes generate distributions?
+
     ### How to infer processes from distributions?
 
     <br>
 
+    ---
+    # Biogeography: theories
+    <hr/><br/>
+
+
+    ### 1. Theory of Island Biogeography (TIB)
+
+    ### 2. Neutral Theory of Biogeography (NTB)
+
     --
-    ### How interactions influence species distributions?
-    ### How to infer the role of biotic interactions from co-occurrence?
+
+    ### ![:fontawe](arrow-right) Within 1 trophic level
+
+    --
+    <br>
+
+    #### ![:fontawe](file-text) [Holt, *Toward a Trophic Island Biogeography* (book chapter), 2009.](https://press.princeton.edu/titles/9096.html)
+    #### ![:fontawe](file-text) [Gravel *et al.*, *Ecology Letters*, 2011.](http://onlinelibrary.wiley.com/doi/10.1111/j.1461-0248.2011.01667.x/abstract)
+    #### ![:fontawe](file-text) [Cazelles *et al.*, *Ecography*, 2016.](http://onlinelibrary.wiley.com/doi/10.1111/ecog.01714/abstract)
+    ####  ![:fontawe](file-text)[Massol *et al.*, *Advances in Ecological Research*, 2017.](https://doi.org/10.1016/bs.aecr.2016.10.004)
+
+    --
+
+    ### ![:fontawe](arrow-right) How to include more trophic levels?
 
 
 
@@ -314,7 +340,7 @@
     layout: true
     class: center, middle, style2
     ---
-    # Biogeography & biotic interaction networks
+    # Biogeography & biotic interactions
     <hr />
     ### Integrating ecological network
 
@@ -322,11 +348,6 @@
     name: style1
     layout: true
     class: style1
-
-    ---
-    # Theory of Island Biogeography (TIB)
-    <hr/><br/>
-    .center[![:scale 100%](img/figMW5.png)]
 
     ---
     # Theory of Island Biogeography (TIB)
@@ -342,10 +363,7 @@
     Powerful vision but strong assumption
 
 
-    <!-- ### [Holt, *Toward a Trophic Island Biogeography* (book chapter), 2009.](https://press.princeton.edu/titles/9096.html)
-    ### [Gravel *et al.*, *Ecology Letters*, 2011.](http://onlinelibrary.wiley.com/doi/10.1111/j.1461-0248.2011.01667.x/abstract)
-    ### [Cazelles *et al.*, *Ecography*, 2016.](http://onlinelibrary.wiley.com/doi/10.1111/ecog.01714/abstract)
-    ### [Massol *et al.*, *Advances in Ecological Research*, 2017.](https://doi.org/10.1016/bs.aecr.2016.10.004) -->
+
 
 
     ???
@@ -358,7 +376,7 @@
 
     .center[![:scale 90%](img/figeco3.png)]
 
-    .small[[Cazelles *et al.*, *Ecography*, 2016.](http://onlinelibrary.wiley.com/doi/10.1111/ecog.01714/abstract)]
+    .small[![:fontawe](file-text) [Cazelles *et al.*, *Ecography*, 2016.](http://onlinelibrary.wiley.com/doi/10.1111/ecog.01714/abstract)]
 
     ---
     # Networks and TIB
@@ -366,8 +384,7 @@
 
     .center[![:scale 90%](img/figeco5.png)]
 
-    .small[[Cazelles *et al.*, *Ecography*, 2016.](http://onlinelibrary.wiley.com/doi/10.1111/ecog.01714/abstract)]
-
+    .small[![:fontawe](file-text) [Cazelles *et al.*, *Ecography*, 2016.](http://onlinelibrary.wiley.com/doi/10.1111/ecog.01714/abstract)]
 
     ---
     # Networks and TIB
@@ -375,25 +392,26 @@
 
     .center[![:scale 90%](img/figeco7.png)]
 
-    .small[[Cazelles *et al.*, *Ecography*, 2016.](http://onlinelibrary.wiley.com/doi/10.1111/ecog.01714/abstract)]
+    .small[![:fontawe](file-text) [Cazelles *et al.*, *Ecography*, 2016.](http://onlinelibrary.wiley.com/doi/10.1111/ecog.01714/abstract)]
 
 
 
     ---
-    # New constraints
+    # What did we learn?
     <hr/>
 
-    ## Interactions affect extinction probability
+    --
+
+    ## Theoretical models with >1 trophic levels raise tons of questions
     <br>
 
     --
-    ## **What** is predictable?
+    ## What is predictable? Where/What are the constraints?
+    <br>
 
     --
-    ## **What** are the constraints?
 
-    --
-    ## Energy constrains community
+    ## Energy!
 
     ### [Metabolic Theory of Ecology](http://onlinelibrary.wiley.com/doi/10.1890/03-9000/abstract)
 
@@ -406,6 +424,16 @@
     <!-- Maybe a given composition of species -->
 
 
+
+
+
+
+
+
+
+
+
+
     ---
     name: style2
     layout: true
@@ -413,7 +441,7 @@
     ---
     # Building an Energetic Theory of Island Biogeography
     <hr />
-    ### A key to integrate them all
+    ### A key to integrate them all?
 
 
     ---
@@ -430,7 +458,7 @@
     is intercepted and circulates in the form of our weather and climatic movements,
     and through animals and plants, before passing off again into space.
 
-    [Elton, *Journal of Experimental Biology*, 1924.](http://jeb.biologists.org/content/2/1/119)
+    ![:fontawe](file-text)  [Elton, *Journal of Experimental Biology*, 1924.](http://jeb.biologists.org/content/2/1/119)
 
     ---
     # A truism?
@@ -444,11 +472,11 @@
     <br>
 
     --
-    ### 3- Water availibility
+    ### 3- Water availability
     <br>
 
     --
-    ### 4- Nutrients availibility
+    ### 4- Nutrients availability
 
     ---
     # A truism?
@@ -549,36 +577,36 @@
 
 
     ---
-    # SARs become SERs &nbsp;&nbsp; .small[[Wright, *Oikos*, 1983.](https://www.jstor.org/stable/3544109)]
+    # SARs become SERs &nbsp;&nbsp; .small[![:fontawe](file-text) [Wright, *Oikos*, 1983.](https://www.jstor.org/stable/3544109)]
     <hr/>
 
-    .center[![:scale 100%](img/figRes11.png)]
+    .center[![:scale 92%](img/figRes11.png)]
 
     ---
     # SARs become SERs &nbsp;&nbsp;
     <hr/>
 
-    .center[![:scale 100%](img/figRes12.png)]
-
-
-    ---
-    # SARs become SERs &nbsp;&nbsp;
-    <hr/>
-
-    .center[![:scale 100%](img/figRes13.png)]
+    .center[![:scale 92%](img/figRes12.png)]
 
 
     ---
     # SARs become SERs &nbsp;&nbsp;
     <hr/>
 
-    .center[![:scale 100%](img/figRes14.png)]
+    .center[![:scale 92%](img/figRes13.png)]
+
 
     ---
     # SARs become SERs &nbsp;&nbsp;
     <hr/>
 
-    .center[![:scale 100%](img/figRes15.png)]
+    .center[![:scale 92%](img/figRes14.png)]
+
+    ---
+    # SARs become SERs &nbsp;&nbsp;
+    <hr/>
+
+    .center[![:scale 92%](img/figRes15.png)]
 
 
 
@@ -586,31 +614,31 @@
     # Mean degree
     <hr/>
 
-    .center[![:scale 100%](img/figRes21.png)]
+    .center[![:scale 92%](img/figRes21.png)]
 
     ---
     # Mean degree
     <hr/>
 
-    .center[![:scale 100%](img/figRes22.png)]
+    .center[![:scale 92%](img/figRes22.png)]
 
     ---
     # Mean degree
     <hr/>
 
-    .center[![:scale 100%](img/figRes23.png)]
+    .center[![:scale 92%](img/figRes23.png)]
 
     ---
     # Mean degree
     <hr/>
 
-    .center[![:scale 100%](img/figRes24.png)]
+    .center[![:scale 92%](img/figRes24.png)]
 
     ---
     # Mean degree &nbsp;&nbsp; .small[[Piechnik *et al.*, *Oikos*, 2008.](https://www.jstor.org/stable/3544109)]
     <hr/>
 
-    .center[![:scale 100%](img/figRes25.png)]
+    .center[![:scale 92%](img/figRes25.png)]
 
 
     <!-- contrast random and non randon scenarios -->
@@ -635,34 +663,32 @@
     layout: true
     class: style1
     ---
-    # A short answer
+    # Quatification across trophic levels
     <hr/><br>
 
-    --
-    ## Improve integration of processes
+    ### Global energy constraints
 
-    ### - TTIB / MET
-
-    ### - Better quantification?
-
-    <br>
+    ![:fontawe](arrow-right) zero-sum in NTB
 
     --
-    ## Better understanding of what distributions say
 
-    <br>
+    ### affect the structure of energy flux
+
+    ![:fontawe](file-text) [Barnes, A. D. *et al.* Energy Flux: The Link between Multitrophic Biodiversity and Ecosystem Functioning. *Trends in Ecology & Evolution* (2018).](https://www.ncbi.nlm.nih.gov/pubmed/29325921)
 
     --
-    ## The problem of the metaweb
+
+    ### which should be reflected in distributions of food webs
+
 
     ---
-    # New insights
+    # Explaining intriguing relationships
     <hr/><br>
 
     .center[![:scale 85%](img/Hatton.png)]
 
     ---
-    # New insights
+    # Forecasting biodiversity accurately
     <hr/>
 
     .center[![:scale 95%](img/figdem7.png)]
@@ -680,7 +706,7 @@
 
     <br><br>
 
-    ![:scale 80%](img/thanks.png)
+    ![:scale 100%](img/thanks.png)
 
 
 
