--- a/index.html
+++ b/index.html
@@ -235,16 +235,6 @@
     ---
     # Biogeography: processes
     <hr/>
-    .center[![:scale 100%](img/figall3.png)]
-
-    ---
-    # Biogeography: processes
-    <hr/>
-    .center[![:scale 100%](img/figall4.png)]
-
-    ---
-    # Biogeography: processes
-    <hr/>
     .center[![:scale 100%](img/figall5.png)]
 
     ---
@@ -301,14 +291,26 @@
     --
     <br>
 
+    ### ![:fontawe](arrow-right) More than 1 trophic level?
+
     #### ![:fontawe](file-text) [Holt, *Toward a Trophic Island Biogeography* (book chapter), 2009.](https://press.princeton.edu/titles/9096.html)
     #### ![:fontawe](file-text) [Gravel *et al.*, *Ecology Letters*, 2011.](http://onlinelibrary.wiley.com/doi/10.1111/j.1461-0248.2011.01667.x/abstract)
     #### ![:fontawe](file-text) [Cazelles *et al.*, *Ecography*, 2016.](http://onlinelibrary.wiley.com/doi/10.1111/ecog.01714/abstract)
     ####  ![:fontawe](file-text)[Massol *et al.*, *Advances in Ecological Research*, 2017.](https://doi.org/10.1016/bs.aecr.2016.10.004)
 
-    --
+
+
+    ---
+    # Biogeography: initial questions
+    <hr/><br/>
 
     ### ![:fontawe](arrow-right) How to include more trophic levels?
+
+    ### ![:fontawe](arrow-right) How to include ecological interactions?
+
+
+
+
 
 
 
@@ -406,17 +408,16 @@
     <br>
 
     --
-    ## What is predictable? Where/What are the constraints?
+    ## What is predictable?
+    <br>
+
+    --
+    ## Where/What are the constraints?
     <br>
 
     --
 
-    ## Energy!
-
-    ### [Metabolic Theory of Ecology](http://onlinelibrary.wiley.com/doi/10.1890/03-9000/abstract)
-
-    ### [Dynamic Energy Budget](http://www.bio.vu.nl/thb/deb/index.html)
-
+    ## Energy! input / flux / existing theories
 
 
     <!-- Stability / MVP and population cosumption -->
@@ -441,7 +442,7 @@
     ---
     # Building an Energetic Theory of Island Biogeography
     <hr />
-    ### A key to integrate them all?
+    ### A key to integrate them all
 
 
     ---
@@ -451,101 +452,84 @@
 
     ---
     # A truism?
-    <hr/><br><br>
-
-    > The ultimate source of nearly all the income of energy which the earth receives
-    is the sun. From it we get a continual stream of radiant energy, part of which
-    is intercepted and circulates in the form of our weather and climatic movements,
-    and through animals and plants, before passing off again into space.
-
-    ![:fontawe](file-text)  [Elton, *Journal of Experimental Biology*, 1924.](http://jeb.biologists.org/content/2/1/119)
-
-    ---
-    # A truism?
-    <hr/><br>
-
-    ### 1- Solar radiation ![:fontawe](long-arrow-right) Autotrophs ![:fontawe](long-arrow-right) Hetreotrophs
-    <br>
-
-    --
-    ### 2- Carbon source
-    <br>
-
-    --
-    ### 3- Water availability
-    <br>
-
-    --
-    ### 4- Nutrients availability
-
-    ---
-    # A truism?
     <hr/>
 
     .center[![:scale 100%](img/ecoreg.png)]
 
+
+
     ---
-    # Model principle
+    # A truism?
+    <hr/><br>
+
+    ## Sun ![:fontawe](long-arrow-right) Autotrophs ![:fontawe](long-arrow-right) Hetreotrophs
+    <br>
+
+    --
+    ## Water, carbon, nutrients availability
+    <br>
+
+    --
+
+    ![:fontawe](file-text)  [Elton, *Journal of Experimental Biology*, 1924.](http://jeb.biologists.org/content/2/1/119)
+
+
+
+    ---
+    # Constraining the model
     <hr/><br>
 
     .center[![:scale 100%](img/figeco5.png)]
 
+
     ---
-    # Model principle
+    # Constraining the model
     <hr/><br>
 
-    ## What's new?
+    ## - 1 island = a limited input of energy
     <br>
 
     --
-    ## 1- Cost of a community
+
+    ## - a foodweb has an energy cost
+    <br>
 
     --
-    ## 2- Extinctions
 
-      ### Random
+    ## - reaching the energy limit triggers an extinction
 
-      ### Energy based
 
 
     ---
     # Energy cost of a network on an island
     <hr/><br>
 
-    .center[![:scale 35%](img/netenerg1.png)]
-
-    ### Niche model + body size to derive maintenance metabolism
-
-    ---
-    # Energy cost of a network on an island
-    <hr/><br>
-
-    .center[![:scale 45%](img/netenerg2.png)]
+    .center[![:scale 42%](img/netenerg2.png)]
 
 
     ---
     # Energy cost of a network on an island
     <hr/><br>
 
-    .center[![:scale 45%](img/netenerg3.png)]
+    .center[![:scale 42%](img/netenerg3.png)]
 
     ---
     # Energy cost of a network on an island
     <hr/><br>
 
-    .center[![:scale 45%](img/netenerg4.png)]
+    .center[![:scale 42%](img/netenerg4.png)]
 
     ---
     # Energy cost of a network on an island
     <hr/><br>
 
-    .center[![:scale 45%](img/netenerg5.png)]
+    .center[![:scale 42%](img/netenerg5.png)]
 
     ---
     # Energy cost of a network on an island
     <hr/><br>
 
-    .center[![:scale 45%](img/netenerg6.png)]
+    .center[![:scale 42%](img/netenerg6.png)]
 
 
 
@@ -567,12 +551,6 @@
 
     .center[![:scale 75%](img/motifcost3.png)]
 
-
-    ---
-    # Model
-    <hr/><br>
-
-    .center[![:scale 100%](img/figeco9.png)]
 
 
 
@@ -649,6 +627,9 @@
 
 
 
+
+
+
     ---
     name: style2
     layout: true
@@ -663,29 +644,36 @@
     layout: true
     class: style1
     ---
-    # Quatification across trophic levels
+    # Quantification across trophic levels
     <hr/><br>
 
-    ### Global energy constraints
+    ### ETIB should ...
+
+    --
+
+    ### ... include a global energy constraints
 
     ![:fontawe](arrow-right) zero-sum in NTB
 
     --
 
-    ### affect the structure of energy flux
+    ### ... describe the structure of energy flux
 
-    ![:fontawe](file-text) [Barnes, A. D. *et al.* Energy Flux: The Link between Multitrophic Biodiversity and Ecosystem Functioning. *Trends in Ecology & Evolution* (2018).](https://www.ncbi.nlm.nih.gov/pubmed/29325921)
+    ![:fontawe](file-text) [Barnes, A. D. *et al.* (2018). Energy Flux: The Link between Multitrophic Biodiversity and Ecosystem Functioning. *Trends in Ecology & Evolution*.](https://www.ncbi.nlm.nih.gov/pubmed/29325921)
 
     --
 
-    ### which should be reflected in distributions of food webs
+    ### ... support the development of an biogeography of food webs
+
+    ![:fontawe](file-text) [Galiana, N., *et al.* (2018). The spatial scaling of species interaction networks. *Nature Ecology & Evolution*.](https://www.nature.com/articles/s41559-018-0517-3)
+
 
 
     ---
     # Explaining intriguing relationships
     <hr/><br>
 
-    .center[![:scale 85%](img/Hatton.png)]
+    .center[![:scale 87%](img/Hatton.png)]
 
     ---
     # Forecasting biodiversity accurately
