last edits version 2

--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
     # Constraining the model
     <hr/><br>
 
-    ## - 1 island = a limited input of energy
+    ## - 1 island = limited input of energy (J.s<sup>-1</sup>)
     <br>
 
     --
@@ -504,32 +504,66 @@
     # Energy cost of a network on an island
     <hr/><br>
 
-    .center[![:scale 42%](img/netenerg2.png)]
+    .column[
+    <br>
+    - simulated food webs
+
+    - body size constrains:
+
+      - energy cost of a population (cM<sup>3/4</sup>)
+      - topology of the food web
+
+    ]
+    .column[![:scale 84%](img/netenerg2.png)]
 
 
     ---
     # Energy cost of a network on an island
     <hr/><br>
 
-    .center[![:scale 42%](img/netenerg3.png)]
+    .column[
+    <br>
+    - Explicit energy transfer Φ
+
+    ]
+    .column[![:scale 84%](img/netenerg4.png)]
+
 
     ---
     # Energy cost of a network on an island
     <hr/><br>
 
-    .center[![:scale 42%](img/netenerg4.png)]
+    .column[
+    <br>
+    - Energy to sustain minimal viable populations (MVP)
+    ]
+    .column[![:scale 84%](img/netenerg3.png)]
+
 
     ---
     # Energy cost of a network on an island
     <hr/><br>
 
-    .center[![:scale 42%](img/netenerg5.png)]
+    .column[
+    <br>
+    - Energy to sustain minimal viable populations (MVP)
+
+    - Otherwise, extinctions!
+      1. random
+      2. the most costly species
+    ]
+    .column[![:scale 84%](img/netenerg5.png)]
+
 
     ---
     # Energy cost of a network on an island
     <hr/><br>
 
-    .center[![:scale 42%](img/netenerg6.png)]
+    .column[
+    <br>
+    - most costly species?
+    ]
+    .column[![:scale 84%](img/netenerg6.png)]
 
 
 
@@ -537,19 +571,19 @@
     # Cost of a community on an island
     <hr/>
 
-    .center[![:scale 75%](img/motifcost1.png)]
+    .center[![:scale 72%](img/motifcost1.png)]
 
     ---
     # Cost of a community on an island
     <hr/>
 
-    .center[![:scale 75%](img/motifcost2.png)]
+    .center[![:scale 72%](img/motifcost2.png)]
 
     ---
     # Cost of a community on an island
     <hr/>
 
-    .center[![:scale 75%](img/motifcost3.png)]
+    .center[![:scale 72%](img/motifcost3.png)]
 
 
 
@@ -558,33 +592,33 @@
     # SARs become SERs &nbsp;&nbsp; .small[![:fontawe](file-text) [Wright, *Oikos*, 1983.](https://www.jstor.org/stable/3544109)]
     <hr/>
 
-    .center[![:scale 92%](img/figRes11.png)]
+    .center[![:scale 92%](img/figSER1.png)]
 
     ---
     # SARs become SERs &nbsp;&nbsp;
     <hr/>
 
-    .center[![:scale 92%](img/figRes12.png)]
-
-
-    ---
-    # SARs become SERs &nbsp;&nbsp;
-    <hr/>
-
-    .center[![:scale 92%](img/figRes13.png)]
+    .center[![:scale 92%](img/figSER2.png)]
 
 
     ---
     # SARs become SERs &nbsp;&nbsp;
     <hr/>
 
-    .center[![:scale 92%](img/figRes14.png)]
+    .center[![:scale 92%](img/figSER3.png)]
+
 
     ---
     # SARs become SERs &nbsp;&nbsp;
     <hr/>
 
-    .center[![:scale 92%](img/figRes15.png)]
+    .center[![:scale 92%](img/figSER4.png)]
+
+    ---
+    # SARs become SERs &nbsp;&nbsp;
+    <hr/>
+
+    .center[![:scale 92%](img/figSER5.png)]
 
 
 
@@ -592,31 +626,26 @@
     # Mean degree
     <hr/>
 
-    .center[![:scale 92%](img/figRes21.png)]
+    .center[![:scale 92%](img/figResX1.png)]
 
     ---
     # Mean degree
     <hr/>
 
-    .center[![:scale 92%](img/figRes22.png)]
+    .center[![:scale 92%](img/figResX2.png)]
 
     ---
     # Mean degree
     <hr/>
 
-    .center[![:scale 92%](img/figRes23.png)]
+    .center[![:scale 92%](img/figResX3.png)]
 
-    ---
-    # Mean degree
-    <hr/>
-
-    .center[![:scale 92%](img/figRes24.png)]
 
     ---
     # Mean degree &nbsp;&nbsp; .small[[Piechnik *et al.*, *Oikos*, 2008.](https://www.jstor.org/stable/3544109)]
     <hr/>
 
-    .center[![:scale 92%](img/figRes25.png)]
+    .center[![:scale 92%](img/figResX5.png)]
 
 
     <!-- contrast random and non randon scenarios -->
@@ -647,36 +676,36 @@
     # Quantification across trophic levels
     <hr/><br>
 
-    ### ETIB should ...
+    ## To do so, ETIB should:
 
     --
 
-    ### ... include a global energy constraints
+    ### 1. include a global energy constraint
 
     ![:fontawe](arrow-right) zero-sum in NTB
 
     --
 
-    ### ... describe the structure of energy flux
+    ### 2. describe the structure of energy flux
 
     ![:fontawe](file-text) [Barnes, A. D. *et al.* (2018). Energy Flux: The Link between Multitrophic Biodiversity and Ecosystem Functioning. *Trends in Ecology & Evolution*.](https://www.ncbi.nlm.nih.gov/pubmed/29325921)
 
     --
 
-    ### ... support the development of an biogeography of food webs
+    ### 3. support the development of the biogeography of food webs
 
     ![:fontawe](file-text) [Galiana, N., *et al.* (2018). The spatial scaling of species interaction networks. *Nature Ecology & Evolution*.](https://www.nature.com/articles/s41559-018-0517-3)
 
 
 
     ---
-    # Explaining intriguing relationships
+    # Explain intriguing relationships
     <hr/><br>
 
     .center[![:scale 87%](img/Hatton.png)]
 
     ---
-    # Forecasting biodiversity accurately
+    # Help forecasting biodiversity
     <hr/>
 
     .center[![:scale 95%](img/figdem7.png)]
